Add a signup link for slack at the top of the page

--- a/edmontonpy/www/templates/base.html
+++ b/edmontonpy/www/templates/base.html
@@ -52,7 +52,7 @@
                 </a>
               </li>
               <li class="nav-item d-none d-md-inline">
-                <a class="nav-link text-white-50" href="https://edmontonpy.slack.com/">
+                <a class="nav-link text-white-50" href="https://join.slack.com/t/edmontonpy/shared_invite/enQtNTc2MTE3MzUwMTY2LTA1MmQxYWU2Mzg5ZDk0MTZlNzEzMTkwMTk2NDFlNDQ0MDgzZTY5MmEzMGQ3MTdhYmUyYTdjNjBiODJmMzlhMjM">
                   <span class="fa-stack font-md">
                     <i class="fas fa-circle fa-stack-2x"></i>
                     <i class="fab fa-slack-hash fa-stack-1x text-primary"></i>
