--- a/edmontonpy/www/templates/base.html
+++ b/edmontonpy/www/templates/base.html
@@ -109,7 +109,7 @@
             <h5 class="text-white"><u>Resources</u></h5>
             <ul class="list-unstyled text-small">
               <li><a class="text-white" href="https://github.com/EdmontonPy/edmontonpy">GitHub</a></li>
-              <li><a class="text-white" href="https://edmontonpy.slack.com/">Slack</a></li>
+              <li><a class="text-white" href="https://join.slack.com/t/edmontonpy/shared_invite/enQtNTc2MTE3MzUwMTY2LTA1MmQxYWU2Mzg5ZDk0MTZlNzEzMTkwMTk2NDFlNDQ0MDgzZTY5MmEzMGQ3MTdhYmUyYTdjNjBiODJmMzlhMjM">Slack</a></li>
               <li><a class="text-white" href="https://twitter.com/edmontonpy">Twitter</a></li>
             </ul>
           </div>
