Fix sponsor image padding + tweak columns slightly
On mobile it now snaps to stacked grid a bit more reliably (not perfect)

--- a/edmontonpy/www/templates/index.html
+++ b/edmontonpy/www/templates/index.html
@@ -112,16 +112,16 @@
         <h4 class="text-muted">Sponsors</h4>
       </div>
       <div class="row d-flex justify-content-around mx-2">
-        <div class="col col-md-2 my-auto">
-          <a href="https://www.startupedmonton.com/"><img class="d-block mx-auto sponsor-logo" src="{% static 'imgs/sponsors/startup-edmonton.png' %}" alt="NAIT Logo"></a>
+          <div class="col-sm-12 col-md-4 mb-3 px-2" style="max-width: 100%">
+            <a href="https://www.startupedmonton.com/"><img class="d-block mx-auto sponsor-logo" src="{% static 'imgs/sponsors/startup-edmonton.png' %}" alt="NAIT Logo"></a>
+          </div>
+          <div class="col-sm-12 col-md-4 mb-3 px-2">
+            <a href="https://www.theorganicbox.ca/"><img class="d-block mx-auto sponsor-logo" src="{% static 'imgs/sponsors/the-organic-box.jpg' %}" alt="The Organic Box Logo"></a>
+          </div>
+          <div class="col-sm-12 col-md-4 px-2">
+            <a href="https://liftinteractive.com/"><img class="d-block mx-auto sponsor-logo" src="{% static 'imgs/sponsors/lift-interactive.png' %}" alt="Lift Interactive Logo"></a>
+          </div>
         </div>
-        <div class="col col-md-2 my-auto">
-          <a href="https://www.theorganicbox.ca/"><img class="d-block mx-auto sponsor-logo" src="{% static 'imgs/sponsors/the-organic-box.jpg' %}" alt="The Organic Box Logo"></a>
-        </div>
-        <div class="col col-md-2 my-auto">
-          <a href="https://liftinteractive.com/"><img class="d-block mx-auto sponsor-logo" src="{% static 'imgs/sponsors/lift-interactive.png' %}" alt="Lift Interactive Logo"></a>
-        </div>
-      </div>
     </div>
   </div>
 </div>
