Add youtube social link on top navbar

--- a/edmontonpy/www/templates/base.html
+++ b/edmontonpy/www/templates/base.html
@@ -66,6 +66,13 @@
                   </span>
                 </a>
               </li>
+              <li class="nav-item d-none d-md-inline">
+                <a class="nav-link text-white-50" href="https://www.youtube.com/playlist?list=PLwNT4e8fY2ZiJj5NSKWWzveRlYO5nxtVn">
+                  <span class="fa-stack font-md">
+                    <i class="fab fa-youtube fa-stack-2x"></i>
+                  </span>
+                </a>
+              </li>
             </ul>
           </div>
         </div>
