Add vertical spacing between sponsors logo

--- a/edmontonpy/www/templates/index.html
+++ b/edmontonpy/www/templates/index.html
@@ -112,13 +112,13 @@
         <h4 class="text-muted">Sponsors</h4>
       </div>
       <div class="row d-flex justify-content-around mx-2">
-        <div class="col col-md-2 my-auto">
+        <div class="col col-md-2 my-auto py-3">
           <a href="https://www.startupedmonton.com/"><img class="d-block mx-auto sponsor-logo" src="{% static 'imgs/sponsors/startup-edmonton.png' %}" alt="NAIT Logo"></a>
         </div>
-        <div class="col col-md-2 my-auto">
+        <div class="col col-md-2 my-auto py-3">
           <a href="https://www.theorganicbox.ca/"><img class="d-block mx-auto sponsor-logo" src="{% static 'imgs/sponsors/the-organic-box.jpg' %}" alt="The Organic Box Logo"></a>
         </div>
-        <div class="col col-md-2 my-auto">
+        <div class="col col-md-2 my-auto py-3">
           <a href="https://liftinteractive.com/"><img class="d-block mx-auto sponsor-logo" src="{% static 'imgs/sponsors/lift-interactive.png' %}" alt="Lift Interactive Logo"></a>
         </div>
       </div>
